Fix sticker alignment bug

--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -71,7 +71,7 @@
     width: 128px;
     height: 128px;
     display: block;
-    margin: 0;
+    margin: 0 auto;
   }
 
   p, pre, blockquote {
